versioned_docs/version-2.0/deployment/mainnet.md
# neutron-1 [mainnet]

## IBC Denoms
| Symbol    |                                                                        |
|-----------|------------------------------------------------------------------------|
| `ATOM`    | `ibc/C4CFF46FD6DE35CA4CF4CE031E643C8FDC9BA4B99AE598E9B0ED98FE3A2319F9` |
| `TIA`     | `ibc/773B4D0A3CD667B2275D5A4A7A2F0909C0BA0F4059C0B9181E680DDF4965DCC7` |
| `stTIA`   | `ibc/6569E05DEE32B339D9286A52BE33DFCEFC97267F23EF9CFDE0C055140967A9A5` |
| `AXL`     | `ibc/C0E66D1C81D8AAF0E6896E05190FDFBC222367148F86AC3EA679C28327A763CD` |
| `axlUSDC` | `ibc/F082B65C88E4B6D5EF1DB243CDA1D331D002759E938A0F5CD3FFDC5D53B3E349` |
| `axlWETH` | `ibc/A585C2D15DCD3B010849B453A2CFCB5E213208A5AB665691792684C26274304D` |
| `USDC`    | `ibc/B559A80D62249C8AA07A380E2A2BEA6E5CA9A6F079C912C3A9E9B494105E4F81` |
| `DYDX`    | `ibc/2CB87BCE0937B1D1DFCEE79BE4501AAF3C265E923509AEAC410AD85D27F35130` |
| `OSMO`    | `ibc/376222D6D9DAE23092E29740E56B758580935A6D77C24C2ABD57A6A78A1F3955` |
| `NLS`     | `ibc/6C9E6701AC217C0FC7D74B0F7A6265B9B4E3C3CDA6E80AADE5F950A8F52F9972` |

## TokenFactory Denoms
| Symbol   | Denom                                                                               |
|----------|-------------------------------------------------------------------------------------|
| `wstETH` | `factory/neutron1ug740qrkquxzrk2hh29qrlx3sktkfml3je7juusc2te7xmvsscns0n2wry/wstETH` |

## Neutron DAO

| Name                                   |                                                                                                                                                                                        | Source Code                                                                                                                                       |
|----------------------------------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|---------------------------------------------------------------------------------------------------------------------------------------------------|
| Neutron DAO Core                       | [neutron1suhgf5svhu4usrurvxzlgn54ksxmn8gljarjtxqnapv8kjnp4nrstdxvff](https://neutron.celat.one/neutron-1/contracts/neutron1suhgf5svhu4usrurvxzlgn54ksxmn8gljarjtxqnapv8kjnp4nrstdxvff) | [cwd-core](https://github.com/neutron-org/neutron-dao/tree/main/contracts/dao/cwd-core)                                                           |
| Single Proposal Module                 | [neutron1436kxs0w2es6xlqpp9rd35e3d0cjnw4sv8j3a7483sgks29jqwgshlt6zh](https://neutron.celat.one/neutron-1/contracts/neutron1436kxs0w2es6xlqpp9rd35e3d0cjnw4sv8j3a7483sgks29jqwgshlt6zh) | [cwd-proposal-single](https://github.com/neutron-org/neutron-dao/tree/main/contracts/dao/proposal/cwd-proposal-single)                            |
| Single Pre-Proposal Module             | [neutron1hulx7cgvpfcvg83wk5h96sedqgn72n026w6nl47uht554xhvj9nsgs8v0z](https://neutron.celat.one/neutron-1/contracts/neutron1hulx7cgvpfcvg83wk5h96sedqgn72n026w6nl47uht554xhvj9nsgs8v0z) | [cwd-pre-propose-single](https://github.com/neutron-org/neutron-dao/tree/main/contracts/dao/pre-propose/cwd-pre-propose-single)                   |
| Multiple Proposal Module               | [neutron1pvrwmjuusn9wh34j7y520g8gumuy9xtl3gvprlljfdpwju3x7ucsj3fj40](https://neutron.celat.one/neutron-1/contracts/neutron1pvrwmjuusn9wh34j7y520g8gumuy9xtl3gvprlljfdpwju3x7ucsj3fj40) | [cwd-proposal-multiple](https://github.com/neutron-org/neutron-dao/tree/main/contracts/dao/proposal/cwd-proposal-multiple)                        |
| Multiple Pre-Proposal Module           | [neutron1up07dctjqud4fns75cnpejr4frmjtddzsmwgcktlyxd4zekhwecqt2h8u6](https://neutron.celat.one/neutron-1/contracts/neutron1up07dctjqud4fns75cnpejr4frmjtddzsmwgcktlyxd4zekhwecqt2h8u6) | [cwd-pre-propose-multiple](https://github.com/neutron-org/neutron-dao/tree/main/contracts/dao/pre-propose/cwd-pre-propose-multiple)               |
| Overrule Proposal Module               | [neutron12pwnhtv7yat2s30xuf4gdk9qm85v4j3e6p44let47pdffpklcxlq56v0te](https://neutron.celat.one/neutron-1/contracts/neutron12pwnhtv7yat2s30xuf4gdk9qm85v4j3e6p44let47pdffpklcxlq56v0te) | [cwd-proposal-single](https://github.com/neutron-org/neutron-dao/tree/main/contracts/dao/proposal/cwd-proposal-single)                            |
| Overrule Pre-Proposal Module           | [neutron1w798gp0zqv3s9hjl3jlnwxtwhykga6rn93p46q2crsdqhaj3y4gsum0096](https://neutron.celat.one/neutron-1/contracts/neutron1w798gp0zqv3s9hjl3jlnwxtwhykga6rn93p46q2crsdqhaj3y4gsum0096) | [cwd-pre-propose-single-overrule](https://github.com/neutron-org/neutron-dao/tree/main/contracts/dao/pre-propose/cwd-pre-propose-single-overrule) |
| Voting Registry                        | [neutron1f6jlx7d9y408tlzue7r2qcf79plp549n30yzqjajjud8vm7m4vdspg933s](https://neutron.celat.one/neutron-1/contracts/neutron1f6jlx7d9y408tlzue7r2qcf79plp549n30yzqjajjud8vm7m4vdspg933s) | [neutron-voting-registry](https://github.com/neutron-org/neutron-dao/tree/main/contracts/dao/voting/neutron-voting-registry)                      |
| NTRN Vault                             | [neutron1qeyjez6a9dwlghf9d6cy44fxmsajztw257586akk6xn6k88x0gus5djz4e](https://neutron.celat.one/neutron-1/contracts/neutron1qeyjez6a9dwlghf9d6cy44fxmsajztw257586akk6xn6k88x0gus5djz4e) | [neutron-vault](https://github.com/neutron-org/neutron-dao/tree/main/contracts/dao/voting/neutron-vault)                                          |
| Credits Vault                          | [neutron1rxwzsw37ulveefk20575mlxl3hzhzv9k46c8gklfkt4g2vk4w3tse8usrs](https://neutron.celat.one/neutron-1/contracts/neutron1rxwzsw37ulveefk20575mlxl3hzhzv9k46c8gklfkt4g2vk4w3tse8usrs) | [credits-vault](https://github.com/neutron-org/neutron-dao/tree/main/contracts/dao/voting/credits-vault)                                          |
| Lockdrop Vault                         | [neutron1f8gs4rp232ngyta3g2efwfkznymvv85du7qm9y0mhvjxpp3cq68qgquudm](https://neutron.celat.one/neutron-1/contracts/neutron1f8gs4rp232ngyta3g2efwfkznymvv85du7qm9y0mhvjxpp3cq68qgquudm) | [lockdrop-vault](https://github.com/neutron-org/neutron-dao/tree/main/contracts/dao/voting/lockdrop-vault)                                        |
| LP Vesting Vault                       | [neutron1adavpfxyp5kgs3zp0n0vkc37qakeh5eqwxqxzysgg0ahlx82rmsqp4rnz8](https://neutron.celat.one/neutron-1/contracts/neutron1adavpfxyp5kgs3zp0n0vkc37qakeh5eqwxqxzysgg0ahlx82rmsqp4rnz8) | [vesting-lp-vault](https://github.com/neutron-org/neutron-dao/tree/main/contracts/dao/voting/vesting-lp-vault)                                    |
| Vesting Investors Vault                | [neutron1dmd56h7hlevuwssp203fgc2uh0qdtwep2m735fzksuavgq3naslqp0ehvx](https://neutron.celat.one/neutron-1/contracts/neutron1dmd56h7hlevuwssp203fgc2uh0qdtwep2m735fzksuavgq3naslqp0ehvx) | [investors-vesting-vault](https://github.com/neutron-org/neutron-dao/tree/main/contracts/dao/voting/investors-vesting-vault)                      |
| Security subDAO Core                   | [neutron1fuyxwxlsgjkfjmxfthq8427dm2am3ya3cwcdr8gls29l7jadtazsuyzwcc](https://neutron.celat.one/neutron-1/contracts/neutron1fuyxwxlsgjkfjmxfthq8427dm2am3ya3cwcdr8gls29l7jadtazsuyzwcc) | [cwd-subdao-core](https://github.com/neutron-org/neutron-dao/tree/main/contracts/subdaos/cwd-subdao-core)                                         |
| Security subDAO Single Proposal Module | [neutron15m728qxvtat337jdu2f0uk6pu905kktrxclgy36c0wd822tpxcmqvnrurt](https://neutron.celat.one/neutron-1/contracts/neutron15m728qxvtat337jdu2f0uk6pu905kktrxclgy36c0wd822tpxcmqvnrurt) | [cwd-subdao-proposal-single](https://github.com/neutron-org/neutron-dao/tree/main/contracts/subdaos/proposal/cwd-subdao-proposal-single)          |
| Security subDAO Pre-Proposal Module    | [neutron1zjd5lwhch4ndnmayqxurja4x5y5mavy9ktrk6fzsyzan4wcgawnqjk5g26](https://neutron.celat.one/neutron-1/contracts/neutron1zjd5lwhch4ndnmayqxurja4x5y5mavy9ktrk6fzsyzan4wcgawnqjk5g26) | [cwd-subdao-pre-propose-single](https://github.com/neutron-org/neutron-dao/tree/main/contracts/subdaos/pre-propose/cwd-subdao-pre-propose-single) |
| Security subDAO Voting Module          | [neutron1wastjc07zuuy46mzzl3egz4uzy6fs59752grxqvz8zlsqccpv2wqhjw0cl](https://neutron.celat.one/neutron-1/contracts/neutron1wastjc07zuuy46mzzl3egz4uzy6fs59752grxqvz8zlsqccpv2wqhjw0cl) | [cwd-voting-cw4](https://github.com/DA0-DA0/dao-contracts/tree/9e496379a1c1e89e00133865c9a1041dfdb20612/contracts/voting/cwd-voting-cw4)          |
| Timelock Module                        | [neutron1t2t2xj0rkktu3wzutyqazdnpaqg00cam6knmx9uqeawfukqp8fss0hz78j](https://neutron.celat.one/neutron-1/contracts/neutron1t2t2xj0rkktu3wzutyqazdnpaqg00cam6knmx9uqeawfukqp8fss0hz78j) | [cwd-subdao-timelock-single](https://github.com/neutron-org/neutron-dao/tree/main/contracts/subdaos/cwd-subdao-timelock-single)                   |
| Security subDAO CW4 Group              | [neutron1hyja4uyjktpeh0fxzuw2fmjudr85rk2qu98fa6nuh6d4qru9l0ssh3kgnu](https://neutron.celat.one/neutron-1/contracts/neutron1hyja4uyjktpeh0fxzuw2fmjudr85rk2qu98fa6nuh6d4qru9l0ssh3kgnu) | [cw4-group](https://github.com/CosmWasm/cw-plus/tree/v1.0.1/contracts/cw4-group)                                                                  |
| Grants subDAO Core                     | [neutron1zjdv3u6svlazlydmje2qcp44yqkt0059chz8gmyl5yrklmgv6fzq9chelu](https://neutron.celat.one/neutron-1/contracts/neutron1zjdv3u6svlazlydmje2qcp44yqkt0059chz8gmyl5yrklmgv6fzq9chelu) | [cwd-subdao-core](https://github.com/neutron-org/neutron-dao/tree/main/contracts/subdaos/cwd-subdao-core)                                         |
| Grants subDAO Sinle Proposal Module    | [neutron14n7jt2qkngxtgr7dgdt50g4xn2a29llz79h9y25lrsqyxrwmngmsmt9kta](https://neutron.celat.one/neutron-1/contracts/neutron14n7jt2qkngxtgr7dgdt50g4xn2a29llz79h9y25lrsqyxrwmngmsmt9kta) | [cwd-subdao-proposal-single](https://github.com/neutron-org/neutron-dao/tree/main/contracts/subdaos/proposal/cwd-subdao-proposal-single)          |
| Grants subDAO Pre-Proposal Module      | [neutron1s0fjev2pmgyaj0uthszzp3tpx59yp2p07vwhj0467sl9j343dk9qss6x9w](https://neutron.celat.one/neutron-1/contracts/neutron1s0fjev2pmgyaj0uthszzp3tpx59yp2p07vwhj0467sl9j343dk9qss6x9w) | [cwd-subdao-pre-propose-single](https://github.com/neutron-org/neutron-dao/tree/main/contracts/subdaos/pre-propose/cwd-subdao-pre-propose-single) |
| Grants subDAO Voting Module            | [neutron1aj3xpcumkx3jr5kncr6gvtduuy4suu6m628ftadv8x8vx9vrfhxs8gkzk7](https://neutron.celat.one/neutron-1/contracts/neutron1aj3xpcumkx3jr5kncr6gvtduuy4suu6m628ftadv8x8vx9vrfhxs8gkzk7) | [cwd-voting-cw4](https://github.com/DA0-DA0/dao-contracts/tree/9e496379a1c1e89e00133865c9a1041dfdb20612/contracts/voting/cwd-voting-cw4)          |

## Neutron TGE

| Name                      |                                                                                                                                                                                        | Source code                                                                                                         |
|---------------------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|---------------------------------------------------------------------------------------------------------------------|
| Airdrop                   | [neutron198sxsrjvt2v2lln2ajn82ks76k97mj72mtgl7309jehd0vy8rezs7e6c56](https://neutron.celat.one/neutron-1/contracts/neutron198sxsrjvt2v2lln2ajn82ks76k97mj72mtgl7309jehd0vy8rezs7e6c56) | [cw20-merkle-airdrop](https://github.com/neutron-org/neutron-tge-contracts/tree/main/contracts/cw20-merkle-airdrop) |
| Distribution              | [neutron1dk9c86h7gmvuaq89cv72cjhq4c97r2wgl5gyfruv6shquwspalgq5u7sy5](https://neutron.celat.one/neutron-1/contracts/neutron1dk9c86h7gmvuaq89cv72cjhq4c97r2wgl5gyfruv6shquwspalgq5u7sy5) | [distribution](https://github.com/neutron-org/neutron-dao/tree/main/contracts/tokenomics/distribution)              |
| Lockdrop                  | [neutron1ryhxe5fzczelcfmrhmcw9x2jsqy677fw59fsctr09srk24lt93eszwlvyj](https://neutron.celat.one/neutron-1/contracts/neutron1ryhxe5fzczelcfmrhmcw9x2jsqy677fw59fsctr09srk24lt93eszwlvyj) | [lockdrop](https://github.com/neutron-org/neutron-tge-contracts/tree/main/contracts/lockdrop)                       |
| Reserve                   | [neutron13we0myxwzlpx8l5ark8elw5gj5d59dl6cjkzmt80c5q5cv5rt54qvzkv2a](https://neutron.celat.one/neutron-1/contracts/neutron13we0myxwzlpx8l5ark8elw5gj5d59dl6cjkzmt80c5q5cv5rt54qvzkv2a) | [reserve](https://github.com/neutron-org/neutron-dao/tree/main/contracts/tokenomics/reserve)                        |
| Price Feed                | [neutron1lxansfc8vkujy997e3xksd3ugsppv6a9jt32pjtgaxr0zkcnkznq67z3ax](https://neutron.celat.one/neutron-1/contracts/neutron1lxansfc8vkujy997e3xksd3ugsppv6a9jt32pjtgaxr0zkcnkznq67z3ax) | [price-feed](https://github.com/neutron-org/neutron-tge-contracts/tree/main/contracts/price-feed)                   |
| Factory                   | [neutron1hptk0k5kng7hjy35vmh009qd5m6l33609nypgf2yc6nqnewduqasxplt4e](https://neutron.celat.one/neutron-1/contracts/neutron1hptk0k5kng7hjy35vmh009qd5m6l33609nypgf2yc6nqnewduqasxplt4e) | [factory](https://github.com/astroport-fi/astroport-core/tree/v1.1.0/contracts/factory)                             |
| Auction                   | [neutron1qj296vdrjfhuvrm96el3yhx8rcpz4k0huqcp9vwtqzhxwrduhs8s49y3p4](https://neutron.celat.one/neutron-1/contracts/neutron1qj296vdrjfhuvrm96el3yhx8rcpz4k0huqcp9vwtqzhxwrduhs8s49y3p4) | [auction](https://github.com/neutron-org/neutron-tge-contracts/tree/main/contracts/auction)                         |
| Credits                   | [neutron1h6828as2z5av0xqtlh4w9m75wxewapk8z9l2flvzc29zeyzhx6fqgp648z](https://neutron.celat.one/neutron-1/contracts/neutron1h6828as2z5av0xqtlh4w9m75wxewapk8z9l2flvzc29zeyzhx6fqgp648z) | [credits](https://github.com/neutron-org/neutron-tge-contracts/tree/main/contracts/credits)                         |
| Neutron Vesting LP [ATOM] | [neutron1kkwp7pd4ts6gukm3e820kyftz4vv5jqtmal8pwqezrnq2ddycqasr87x9p](https://neutron.celat.one/neutron-1/contracts/neutron1kkwp7pd4ts6gukm3e820kyftz4vv5jqtmal8pwqezrnq2ddycqasr87x9p) | [vesting-lp](https://github.com/neutron-org/neutron-tge-contracts/tree/main/contracts/vesting-lp)                   |
| Neutron Vesting LP [USDC] | [neutron1wgzzn83hhcc5asrtslqvaw2wuqqkfulgac7ze94dmqkrxu8nsensmy9dkv](https://neutron.celat.one/neutron-1/contracts/neutron1wgzzn83hhcc5asrtslqvaw2wuqqkfulgac7ze94dmqkrxu8nsensmy9dkv) | [vesting-lp](https://github.com/neutron-org/neutron-tge-contracts/tree/main/contracts/vesting-lp)                   |

## Neutron Vesting

| Name                      |                                                                                                                                                                                        | Source code                                                                                                                                     |
|---------------------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-------------------------------------------------------------------------------------------------------------------------------------------------|
| Neutron Vesting Investors | [neutron14q5elxj4ghktt7d7d0uw0cs0gqyeay25h5fkree897gjm38gevxqmvqsq5](https://neutron.celat.one/neutron-1/contracts/neutron14q5elxj4ghktt7d7d0uw0cs0gqyeay25h5fkree897gjm38gevxqmvqsq5) | [vesting-investors](https://github.com/neutron-org/neutron-tge-contracts/tree/main/contracts/vesting-investors)                                 |
| LTI Vesting               | [neutron1a5xz4zm0gkpcf92ddm7fw8pghg2mf4wm6cyu6cgcruq35upf7auslnnfye](https://neutron.celat.one/neutron-1/contracts/neutron1a5xz4zm0gkpcf92ddm7fw8pghg2mf4wm6cyu6cgcruq35upf7auslnnfye) | [vesting-lti](https://github.com/neutron-org/neutron-tge-contracts/tree/main/contracts/vesting-lti)                                             |

## Bridge

### Contracts

| Name                       | Address                                                                                                                                                                                |
|----------------------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| Lido Satellite (neutron-1) | [neutron1ug740qrkquxzrk2hh29qrlx3sktkfml3je7juusc2te7xmvsscns0n2wry](https://neutron.celat.one/neutron-1/contracts/neutron1ug740qrkquxzrk2hh29qrlx3sktkfml3je7juusc2te7xmvsscns0n2wry) |
| GMP Helper (Ethereum)      | [0x8A5fcd88B4aC70A1939955fAeA4E12bd0C7B1237](https://etherscan.io/address/0x8A5fcd88B4aC70A1939955fAeA4E12bd0C7B1237)                                                                  |
